# subratamondal1.github.io

./: _quarto.yml  blog.qmd  index.qmd  projects.qmd  pyproject.toml
.quarto/idx/: about.qmd.json  index.qmd.json
.quarto/xref/: INDEX
_site/: about.html  search.json
docs/: blog.html  blog.xml  favourite.html  index.html  listings.json  projects.html  projects.xml  robots.txt  search.json  sitemap.xml
docs/posts/2023-10-20-numpy/: hello.html  index.html
docs/posts/2023-10-21-pandas/: index.html
docs/projects/birds_species_detector/: birds_species.html  index.html
docs/projects/pets_breed_detector/: index.html  pets_breed_detector.html
docs/site_libs/bootstrap/: bootstrap-dark.min.css
posts/: _metadata.yml
posts/2023-10-20-numpy/: hello.ipynb  index.qmd
posts/2023-10-21-pandas/: index.qmd
posts/2023-11-06-ml-and-neurons/: Machine Learning and Neurons.ipynb
projects/birds_species_detector/: index.qmd
projects/pets_breed_detector/: index.qmd
