[tool.poetry]
name = "subratamondal1-github-io"
version = "0.1.0"
description = ""
authors = ["Subrata Mondal <subratasubha2@gmail.com>"]
readme = "README.md"
packages = [{include = "subratamondal1"}]

[tool.poetry.dependencies]
python = "^3.11"
quarto = "^0.1.0"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
